Conseguimos finalmente atingir o dragão
Co-authored-by: Ronaldo Drecksler <ronaldo-dck@users.noreply.github.com>
Co-authored-by: Igor Kaiser Gris <igorkagris@users.noreply.github.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Iniciar",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/lexer.x",
-            "args": [],
+            "program": "${workspaceFolder}/semantico/sintatico.x",
+            "args": ["overview.ml"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
